--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 *-bak
+*fp-info-cache
 /hardware/base/base_4.0/fp-info-cache
-/hardware/tone_block/fp-info-cache
-/hardware/bobbin/bobbin_top_3.3/fp-info-cache
+
