--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,7 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
-/hardware/tone_block/panel/
-/hardware/preamp/panel/
+
+*gerber*
+*panel.kicad_pro
+*panel.kicad_pcb
